Z80: Added logic to properly handle Enable Interrupts and Halts, VDP: Changed when LineInterrupts occur during a cycle, PSG: Started port map layout for reading/writing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ set(MasterSystemSource
     # Sega VDP sources
     src/vdp/vdp.cpp
 
+    # Sega PSG sources
+    src/psg/psg.cpp
+
     # Emulator sources
     src/sms/sms.cpp
     src/sms/draw.cpp
