Use FetchContent to retrieve depenencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,22 @@ cmake_minimum_required(VERSION 3.27)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+include(FetchContent)
+
+FetchContent_Declare(
+    sdl3
+    GIT_REPOSITORY git@github.com:libsdl-org/SDL.git
+    GIT_TAG release-3.2.x
+)
+
+FetchContent_Declare(
+    json
+    GIT_REPOSITORY git@github.com:nlohmann/json.git
+    GIT_TAG master
+)
+
+FetchContent_MakeAvailable(sdl3 json)
+
 project(MasterSystemInterpreter)
 
 set(MasterSystemSource
@@ -34,16 +50,10 @@ set(MasterSystemSource
     src/sms/draw.cpp
 )
 
-set(LINK_DIRS ext/SDL3-3.2.10/x86_64-w64-mingw32/lib)
-set(LINK_LIBS SDL3)
-set(INCLUDE_DIRS src ext/SDL3-3.2.10/x86_64-w64-mingw32/include ext/nlohmann/include)
-
 add_executable(sms src/main.cpp ${MasterSystemSource})
-target_include_directories(sms PUBLIC ${INCLUDE_DIRS})
-target_link_directories(sms PUBLIC ${LINK_DIRS})
-target_link_libraries(sms PUBLIC ${LINK_LIBS})
+target_include_directories(sms PRIVATE src)
+target_link_libraries(sms PRIVATE SDL3-shared)
 
 add_executable(test src/test.cpp ${MasterSystemSource})
-target_include_directories(test PUBLIC ${INCLUDE_DIRS})
-target_link_directories(test PUBLIC ${LINK_DIRS})
-target_link_libraries(test PUBLIC ${LINK_LIBS})
+target_include_directories(test PRIVATE src)
+target_link_libraries(test PRIVATE SDL3-shared nlohmann_json)
