Reorganized draw functions, and utilized SDL textures to optimize rendering directly from the VDP framebuffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,13 +41,13 @@ set(MasterSystemSource
 
     # Sega VDP sources
     src/vdp/vdp.cpp
+    src/vdp/draw.cpp
 
     # Sega PSG sources
     src/psg/psg.cpp
 
     # Emulator sources
     src/sms/sms.cpp
-    src/sms/draw.cpp
 )
 
 add_executable(sms src/main.cpp ${MasterSystemSource})
